--- a/others.html
+++ b/others.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!----Shree Anugraha Furnitures----> 
+<!----Shree Anugraha Furniture----> 
 
 <head>
     <meta charset="UTF-8">
