--- a/doors.html
+++ b/doors.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!----Shree Anugraha Furnitures----> 
+<!----Shree Anugraha Furnitures works----> 
 
 <head>
     <meta charset="UTF-8">
