--- a/sofa.html
+++ b/sofa.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!----Shree Anugraha Furniture----> 
+<!----Shree Anugraha Furniture works----> 
 
 <head>
     <meta charset="UTF-8">
