--- a/sofa.html
+++ b/sofa.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!----Shree Anugraha Furniture works----> 
+<!----Shree Anugraha Furnitures----> 
 
 <head>
     <meta charset="UTF-8">
@@ -59,7 +59,7 @@
 </main>
 <footer>
 <script src="Search.js"></script>
-<script src="script.js"></script>
+
 </footer>
 </body>  
 
