--- a/teapoy.html
+++ b/teapoy.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!----Shree Anugraha Furniture works----> 
+<!----Shree Anugraha Furnitures Works----> 
 
 <head>
     <meta charset="UTF-8">
@@ -60,7 +60,7 @@
 </main> 
 <footer>
 <script src="Search.js"></script>
-<script src="script.js"></script>
+
 </footer>
 </body>  
 
